gccida/g1/simplify_replace_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:719:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v7; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:724:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:727:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:732:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:735:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:749:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:784:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( unsigned int)x[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:785:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:788:33: error: use of undeclared identifier 'machine_mode'
result = simplify_gen_subreg( ( machine_mode)*( ( unsigned __int8 *)x + 2), v13, v12, v10); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:808:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/simplify-rtx.c:828:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_replace_rtx/src/obj/simplify-rtx.o] Error 1
